--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Simon Opheim",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "node-html-parser": "^1.1.15",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
