--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Simon Opheim",
   "license": "ISC",
   "dependencies": {
+    "d3": "^5.9.2",
+    "d3-cloud": "^1.2.5",
     "express": "^4.17.1",
     "node-html-parser": "^1.1.15",
     "request": "^2.88.0",
