--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "word-cloud-from-links",
   "version": "1.0.0",
   "description": "creates a word cloud from a web page",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
     "node-html-parser": "^1.1.15",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
   }
 }
