--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "creates a word cloud from a web page",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Simon Opheim",
   "license": "ISC",
@@ -17,6 +18,9 @@
     "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4"
   }
