--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Simon Opheim",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "d3": "^5.9.2",
     "d3-cloud": "^1.2.5",
     "express": "^4.17.1",
